--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@jeffnts/ui-startkit",
-  "version": "0.0.5",
+  "name": "ui-startkit",
+  "version": "0.0.6",
   "description": "Adicione componentes reutilizáveis ao seu projeto",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
