chore(ci): update Node.js version from 20 to 22 in CI workflows for compatibility chore(publish): remove authentication step for GitHub Packages and add step to make package public chore(package): update package name to include scope for better organization chore(package): update build and publish commands to use scoped package name

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ui-startkit",
+  "name": "@jeffnts/ui-startkit",
   "version": "0.0.1",
   "description": "Adicione componentes reutilizáveis ao seu projeto",
   "main": "dist/index.js",
