--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,9 +17,6 @@ jobs:
           node-version: '22'
           registry-url: 'https://npm.pkg.github.com/'
 
-      - name: Authenticate to GitHub Packages
-        run: npm config set //npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}
-
       - name: Install dependencies
         run: npm install
 
@@ -28,3 +25,6 @@ jobs:
 
       - name: Publish CLI to GitHub Packages
         run: npm run publish-cli
+
+      - name: Make package public
+        run: npm publish --access public
