--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,6 +17,9 @@ jobs:
           node-version: '22'
           registry-url: 'https://npm.pkg.github.com/'
 
+      - name: Authenticate to GitHub Packages
+        run: npm config set //npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}
+
       - name: Install dependencies
         run: npm install
 
@@ -25,5 +28,5 @@ jobs:
 
       - name: Publish CLI to GitHub Packages
         run: npm run publish-cli
+        
 
-     
