chore(ci): downgrade Node.js version from 22 to 20 for compatibility reasons chore(package.json): remove unnecessary --access public flag from publish-cli script to simplify command

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "npm run build --workspaces",
     "serve": "npx http-server ./packages/ui/storybook-static",
     "build-cli": "npm run build -w=@jeffnts/ui-startkit",
-    "publish-cli": "npm publish --access public -w=@jeffnts/ui-startkit"
+    "publish-cli": "npm publish -w=@jeffnts/ui-startkit"
   },
   "keywords": [],
   "author": "",
