chore(publish.yml): update authentication step to use npm registry instead of GitHub Packages for publishing chore(package.json): add publishConfig to specify public access and npm registry for the CLI package

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -18,6 +18,10 @@
     "type": "git",
     "url": "git+https://github.com/jeffnts/ui-startkit.git"
   },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
   "dependencies": {
     "commander": "^14.0.0",
     "dotenv": "^17.2.1",
