chore(cli): bump version from 0.0.1 to 0.0.2 to reflect new changes feat(cli): add copy-css script to copy CSS file from UI to CLI dist directory during build process

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jeffnts/ui-startkit",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Adicione componentes reutilizáveis ao seu projeto",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -9,7 +9,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup src/index.ts --format cjs --dts --clean --external chalk --external ora --external prompts --external node-fetch --external execa --external fs-extra"
+    "build": "tsup src/index.ts --format cjs --dts --clean --external chalk --external ora --external prompts --external node-fetch --external execa --external fs-extra && node src/scripts/copy-css.js"
   },
   "bin": {
     "ui-startkit": "./dist/index.js"
